[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fft"
authors = [{name = "Miguel Masó", email = "miguel.maso@upc.edu"}]
version = "0.0.1"
license = "MIT"
keywords = ["structural dynamics", "Fourier transform", "teaching"]
requires-python = ">=3"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyqt5",
    "superqt",
]

[project.urls]
Homepage = "https://github.com/miguelmaso/dynamics"
Repository = "https://github.com/miguelmaso/dynamics/tools"
